update list of simulators

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -396,3 +396,332 @@ DOI: 10.1007/978-3-642-34327-8_34},
   place = {Berlin, Heidelberg},
   title = {SwarmSimX: Real-Time Simulation Environment for Multi-robot Systems},
 }
+@preprint{shahAirSimHighFidelityVisual2017,
+  shortTitle = {AirSim},
+  libraryCatalog = {arXiv.org},
+  language = {en},
+  DOI = {10.48550/arXiv.1705.05065},
+  title = {AirSim: High-Fidelity Visual and Physical Simulation for Autonomous Vehicles},
+  author = {Shah, Shital and Dey, Debadeepta and Lovett, Chris and Kapoor, Ashish},
+  date = {2017-07-18 2017-07-18},
+  accessDate = {2025-02-25 21:30:50},
+  repository = {arXiv},
+  archiveID = {arXiv:1705.05065},
+  year = {2017},
+  extra = {arXiv:1705.05065 [cs]},
+  key = {I2363D9V},
+  url = {http://arxiv.org/abs/1705.05065},
+  abstractNote = {Developing and testing algorithms for autonomous vehicles in real world is an expensive and time consuming process. Also, in order to utilize recent advances in machine intelligence and deep learning we need to collect a large amount of annotated training data in a variety of conditions and environments. We present a new simulator built on Unreal Engine that offers physically and visually realistic simulations for both of these goals. Our simulator includes a physics engine that can operate at a high frequency for real-time hardware-in-the-loop (HITL) simulations with support for popular protocols (e.g. MavLink). The simulator is designed from the ground up to be extensible to accommodate new types of vehicles, hardware platforms and software protocols. In addition, the modular design enables various components to be easily usable independently in other projects. We demonstrate the simulator by ﬁrst implementing a quadrotor as an autonomous vehicle and then experimentally comparing the software components with real-world ﬂights.},
+}
+@conferencePaper{pinciroliARGoSModularMultiengine2011,
+  shortTitle = {ARGoS},
+  key = {47TEXWB8},
+  accessDate = {2025-02-25 22:15:08},
+  DOI = {10.1109/IROS.2011.6094829},
+  title = {ARGoS: A modular, multi-engine simulator for heterogeneous swarm robotics},
+  author = {Pinciroli, Carlo and Trianni, Vito and O'Grady, Rehan and Pini, Giovanni and Brutschy, Arne and Brambilla, Manuele and Mathews, Nithin and Ferrante, Eliseo and Di Caro, Gianni and Ducatelle, Frederick and Stirling, Timothy and Gutierrez, Alvaro and Gambardella, Luca Maria and Dorigo, Marco},
+  place = {San Francisco, CA},
+  libraryCatalog = {DOI.org (Crossref)},
+  conferenceName = {2011 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2011)},
+  publisher = {IEEE},
+  ISBN = {978-1-61284-456-5 978-1-61284-454-1 978-1-61284-455-8},
+  year = {2011},
+  date = {2011-01-09 01-09-2011},
+  pages = {5027-5034},
+  url = {http://ieeexplore.ieee.org/document/6094829/},
+  proceedingsTitle = {2011 IEEE/RSJ International Conference on Intelligent Robots and Systems},
+}
+@preprint{kolveAI2THORInteractive3D2022,
+  shortTitle = {AI2-THOR},
+  language = {en},
+  accessDate = {2025-02-25 21:56:35},
+  DOI = {10.48550/arXiv.1712.05474},
+  title = {AI2-THOR: An Interactive 3D Environment for Visual AI},
+  archiveID = {arXiv:1712.05474},
+  abstractNote = {We introduce The House Of inteRactions (THOR), a framework for visual AI research, available at http://ai2thor.allenai.org. AI2-THOR consists of near photo-realistic 3D indoor scenes, where AI agents can navigate in the scenes and interact with objects to perform tasks. AI2-THOR enables research in many different domains including but not limited to deep reinforcement learning, imitation learning, learning by interaction, planning, visual question answering, unsupervised representation learning, object detection and segmentation, and learning models of cognition. The goal of AI2-THOR is to facilitate building visually intelligent models and push the research forward in this domain.},
+  date = {2022-08-26 2022-08-26},
+  author = {Kolve, Eric and Mottaghi, Roozbeh and Han, Winson and VanderBilt, Eli and Weihs, Luca and Herrasti, Alvaro and Deitke, Matt and Ehsani, Kiana and Gordon, Daniel and Zhu, Yuke and Kembhavi, Aniruddha and Gupta, Abhinav and Farhadi, Ali},
+  repository = {arXiv},
+  year = {2022},
+  key = {4E5T3KKU},
+  libraryCatalog = {arXiv.org},
+  url = {http://arxiv.org/abs/1712.05474},
+  extra = {arXiv:1712.05474 [cs]},
+}
+@journalArticle{gilDevelopmentDeploymentNew2015,
+  journalAbbreviation = {Comp Applic In Engineering},
+  ISSN = {1061-3773, 1099-0542},
+  language = {en},
+  accessDate = {2025-02-25 21:59:50},
+  DOI = {10.1002/cae.21615},
+  title = {Development and deployment of a new robotics toolbox for education},
+  rights = {http://onlinelibrary.wiley.com/termsAndConditions#vor},
+  author = {Gil, Arturo and Reinoso, Oscar and Marin, Jose Maria and Paya, Luis and Ruiz, Javier},
+  abstractNote = {ABSTRACT
+            
+              
+              
+                This paper presents a new toolbox focussed on the teaching of robotic manipulators. The library works under Matlab and has been designed to strengthen the theoretical concepts explained during the theory lectures. The educational approach is focussed on teaching the main concepts through developing math modeling and simulation. In order to do this, the toolbox aims at the fulfillment of a set of practical sessions that allow the students to test most of the concepts of an introductory course in robotic manipulators. In addition, the library possesses features that typically needed the usage of proprietary software, such as the visualization of a realistic 3D representation of commercial robotic arms and the programming of those arms in an industrial language. The practices include the concepts of direct and inverse kinematics, inverse and direct dynamics, path planning and robot programming. As a transversal practice, during the sessions, the student is asked to choose and integrate a new robotic arm in the library, proposing a particular solution to the direct and inverse kinematic problem, as well as the inclusion of other important parameters. The library has been deployed during the last year in bachelor and master studies and has received a nice acceptance. Finally, the library has been assessed in terms of usefulness, design and usage by means of a student survey. In addition, the surveys were designed to establish a relation between the student perception of the system, the time spent on the tool and their learning achievements. © 2014 Wiley Periodicals, Inc. Comput Appl Eng Educ 23:443–454, 2015; View this article online at
+                wileyonlinelibrary.com/journal/cae
+                ; DOI
+                10.1002/cae.21615},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {443-454},
+  date = {2015-05-00 05-2015},
+  volume = {23},
+  year = {2015},
+  publicationTitle = {Computer Applications in Engineering Education},
+  key = {8EBTSD2S},
+  url = {https://onlinelibrary.wiley.com/doi/10.1002/cae.21615},
+  issue = {3},
+}
+@conferencePaper{inproceedings,
+  date = {2021-12-00 2021-12},
+  year = {2021},
+  title = {AVIS engine: a high-performance simulation software for autonomous vehicles},
+  extra = {Citation Key: inproceedings},
+  key = {CFQNW7UG},
+  author = {Zarif, Amir Mohammad and Tayebzadeh, Seyed Mohammad Hossein and Zarif Shahsavan, Amirmahdi and Sadeghnejad, Soroush},
+}
+@conferencePaper{zarifAVISEngineHighperformance2021,
+  date = {2021-12-00 2021-12},
+  year = {2021},
+  title = {AVIS engine: a high-performance simulation software for autonomous vehicles},
+  key = {CFQNW7UG},
+  author = {Zarif, Amir Mohammad and Tayebzadeh, Seyed Mohammad Hossein and Zarif Shahsavan, Amirmahdi and Sadeghnejad, Soroush},
+}
+@conferencePaper{pmlr-v78-dosovitskiy17a,
+  extra = {Citation Key: pmlr-v78-dosovitskiy17a},
+  abstractNote = {We introduce CARLA, an open-source simulator for autonomous driving research. CARLA has been developed from the ground up to support development, training, and validation of autonomous urban driving systems. In addition to open-source code and protocols, CARLA provides open digital assets (urban layouts, buildings, vehicles) that were created for this purpose and can be used freely. The simulation platform supports flexible specification of sensor suites and environmental conditions. We use CARLA to study the performance of three approaches to autonomous driving: a classic modular pipeline, an end-to-end model trained via imitation learning, and an end-to-end model trained via reinforcement learning. The approaches are evaluated in controlled scenarios of increasing difficulty, and their performance is examined via metrics provided by CARLA, illustrating the platform’s utility for autonomous driving research.},
+  proceedingsTitle = {Proceedings of the 1st annual conference on robot learning},
+  date = {2017-11-13 13–15 Nov 2017},
+  series = {Proceedings of machine learning research},
+  pages = {1–16},
+  publisher = {PMLR},
+  volume = {78},
+  year = {2017},
+  title = {CARLA: An open urban driving simulator},
+  key = {TYVJ7VLM},
+  url = {https://proceedings.mlr.press/v78/dosovitskiy17a.html},
+  author = {Dosovitskiy, Alexey and Ros, German and Codevilla, Felipe and Lopez, Antonio and Koltun, Vladlen and Levine, Sergey and Vanhoucke, Vincent and Goldberg, Ken},
+}
+@conferencePaper{rohmerVREPVersatileScalable2013,
+  ISBN = {978-1-4673-6358-7 978-1-4673-6357-0},
+  pages = {1321-1326},
+  key = {XB4UABF3},
+  DOI = {10.1109/IROS.2013.6696520},
+  libraryCatalog = {DOI.org (Crossref)},
+  title = {V-REP: A versatile and scalable robot simulation framework},
+  author = {Rohmer, Eric and Singh, Surya P. N. and Freese, Marc},
+  place = {Tokyo},
+  date = {2013-11-00 11-2013},
+  year = {2013},
+  language = {en},
+  url = {http://ieeexplore.ieee.org/document/6696520/},
+  proceedingsTitle = {2013 IEEE/RSJ International Conference on Intelligent Robots and Systems},
+  accessDate = {2025-02-25 22:12:50},
+  conferenceName = {2013 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2013)},
+  publisher = {IEEE},
+  shortTitle = {V-REP},
+}
+@journalArticle{millerGraspIt2004,
+  publicationTitle = {IEEE Robotics & Automation Magazine},
+  issue = {4},
+  journalAbbreviation = {IEEE Robot. Automat. Mag.},
+  language = {en},
+  rights = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+  DOI = {10.1109/MRA.2004.1371616},
+  pages = {110-122},
+  title = {GraspIt!},
+  author = {Miller, A.T. and Allen, P.K.},
+  date = {2004-12-00 12-2004},
+  libraryCatalog = {DOI.org (Crossref)},
+  ISSN = {1070-9932},
+  year = {2004},
+  accessDate = {2025-02-25 22:42:57},
+  volume = {11},
+  url = {http://ieeexplore.ieee.org/document/1371616/},
+  key = {TJ3QXD4Z},
+}
+@conferencePaper{savvaHabitatPlatformEmbodied2019,
+  key = {HD4DBEMU},
+  abstractNote = {We present Habitat, a platform for research in embodied artiﬁcial intelligence (AI). Habitat enables training embodied agents (virtual robots) in highly efﬁcient photorealistic 3D simulation. Speciﬁcally, Habitat consists of: (i) Habitat-Sim: a ﬂexible, high-performance 3D simulator with conﬁgurable agents, sensors, and generic 3D dataset handling. Habitat-Sim is fast – when rendering a scene from Matterport3D, it achieves several thousand frames per second (fps) running single-threaded, and can reach over 10,000 fps multi-process on a single GPU.},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {9338-9346},
+  title = {Habitat: A Platform for Embodied AI Research},
+  author = {Savva, Manolis and Kadian, Abhishek and Maksymets, Oleksandr and Zhao, Yili and Wijmans, Erik and Jain, Bhavana and Straub, Julian and Liu, Jia and Koltun, Vladlen and Malik, Jitendra and Parikh, Devi and Batra, Dhruv},
+  proceedingsTitle = {2019 IEEE/CVF International Conference on Computer Vision (ICCV)},
+  conferenceName = {2019 IEEE/CVF International Conference on Computer Vision (ICCV)},
+  publisher = {IEEE},
+  date = {2019-10-00 10-2019},
+  ISBN = {978-1-7281-4803-8},
+  language = {en},
+  DOI = {10.1109/ICCV.2019.00943},
+  place = {Seoul, Korea (South)},
+  year = {2019},
+  accessDate = {2025-02-25 23:21:41},
+  rights = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+  url = {https://ieeexplore.ieee.org/document/9010745/},
+  shortTitle = {Habitat},
+}
+@conferencePaper{echeverriaModularOpenRobots2011,
+  key = {7AUIUNV5},
+  abstractNote = {This paper presents MORSE, a new open–source robotics simulator. MORSE provides several features of interest to robotics projects: it relies on a component-based architecture to simulate sensors, actuators and robots; it is ﬂexible, able to specify simulations at variable levels of abstraction according to the systems being tested; it is capable of representing a large variety of heterogeneous robots and full 3D environments (aerial, ground, maritime); and it is designed to allow simulations of multiple robots systems. MORSE uses a “Softwarein-the-Loop” philosophy, i.e. it gives the possibility to evaluate the algorithms embedded in the software architecture of the robot within which they are to be integrated. Still, MORSE is independent of any robot architecture or communication framework (middleware).},
+  DOI = {10.1109/ICRA.2011.5980252},
+  pages = {46-51},
+  title = {Modular open robots simulation engine: MORSE},
+  author = {Echeverria, Gilberto and Lassabe, Nicolas and Degroote, Arnaud and Lemaignan, Severin},
+  proceedingsTitle = {2011 IEEE International Conference on Robotics and Automation},
+  libraryCatalog = {DOI.org (Crossref)},
+  conferenceName = {2011 IEEE International Conference on Robotics and Automation (ICRA)},
+  publisher = {IEEE},
+  ISBN = {978-1-61284-386-5},
+  date = {2011-05-00 05-2011},
+  language = {en},
+  place = {Shanghai, China},
+  year = {2011},
+  accessDate = {2025-02-25 23:33:20},
+  url = {http://ieeexplore.ieee.org/document/5980252/},
+  shortTitle = {Modular open robots simulation engine},
+}
+@document{coumans2021,
+  extra = {Citation Key: coumans2021},
+  date = {2016-00-00 2016–2021},
+  year = {2016},
+  title = {PyBullet, a Python module for physics simulation for games, robotics and machine learning},
+  key = {NJR6D9DD},
+  url = {http://pybullet.org},
+  author = {Coumans, Erwin and Bai, Yunfei},
+}
+@journalArticle{Baumgartner_PyBullet_Industrial_A_2023,
+  extra = {Citation Key: Baumgartner_PyBullet_Industrial_A_2023},
+  key = {HCCI73L6},
+  date = {2023-05-00 2023-05},
+  issue = {85},
+  DOI = {10.21105/joss.05174},
+  publicationTitle = {Journal of Open Source Software},
+  pages = {5174},
+  year = {2023},
+  title = {PyBullet Industrial: A process-aware robot simulation},
+  volume = {8},
+  url = {https://joss.theoj.org/papers/10.21105/joss.05174},
+  author = {Baumgärtner, Jan and Hansjosten, Malte and Schönhofen, Dominik and Fleischer, Prof. Dr.-Ing. Jürgen},
+}
+@conferencePaper{xiangSAPIENSimulAtedPartBased2020,
+  key = {ZMUX8KZ9},
+  abstractNote = {Building home assistant robots has long been a goal for vision and robotics researchers. To achieve this task, a simulated environment with physically realistic simulation, sufﬁcient articulated objects, and transferability to the real robot is indispensable. Existing environments achieve these requirements for robotics simulation with different levels of simpliﬁcation and focus. We take one step further in constructing an environment that supports household tasks for training robot learning algorithm. Our work, SAPIEN, is a realistic and physics-rich simulated environment that hosts a large-scale set of articulated objects. SAPIEN enables various robotic vision and interaction tasks that require detailed part-level understanding.We evaluate stateof-the-art vision algorithms for part detection and motion attribute recognition as well as demonstrate robotic interaction tasks using heuristic approaches and reinforcement learning algorithms. We hope that SAPIEN will open research directions yet to be explored, including learning cognition through interaction, part motion discovery, and construction of robotics-ready simulated game environment.},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {11094-11104},
+  title = {SAPIEN: A SimulAted Part-Based Interactive ENvironment},
+  author = {Xiang, Fanbo and Qin, Yuzhe and Mo, Kaichun and Xia, Yikuan and Zhu, Hao and Liu, Fangchen and Liu, Minghua and Jiang, Hanxiao and Yuan, Yifu and Wang, He and Yi, Li and Chang, Angel X. and Guibas, Leonidas J. and Su, Hao},
+  proceedingsTitle = {2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  conferenceName = {2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  publisher = {IEEE},
+  date = {2020-06-00 6-2020},
+  ISBN = {978-1-7281-7168-5},
+  language = {en},
+  DOI = {10.1109/CVPR42600.2020.01111},
+  place = {Seattle, WA, USA},
+  year = {2020},
+  accessDate = {2025-02-25 23:50:48},
+  rights = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+  url = {https://ieeexplore.ieee.org/document/9156706/},
+  shortTitle = {SAPIEN},
+}
+@bookSection{huguesSimbadAutonomousRobot2006,
+  bookTitle = {From Animals to Animats 9},
+  extra = {Series Title: Lecture Notes in Computer Science
+DOI: 10.1007/11840541_68},
+  accessDate = {2025-02-26 00:29:51},
+  abstractNote = {Simbad is an open source Java 3d robot simulator for scientiﬁc and educational purposes. It is mainly dedicated to researchers and programmers who want a simple basis for studying Situated Artiﬁcial Intelligence, Machine Learning, and more generally AI algorithms, in the context of Autonomous Robotics and Autonomous Agents. It is is kept voluntarily readable and simple for fast implementation in the ﬁeld of Research and/or Education.},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {831-842},
+  title = {Simbad: An Autonomous Robot Simulation Package for Education and Research},
+  author = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Dough and Vardi, Moshe Y. and Weikum, Gerhard and Nolfi, Stefano and Baldassarre, Gianluca and Calabretta, Raffaele and Hallam, John C. T. and Marocco, Davide and Meyer, Jean-Arcady and Miglino, Orazio and Parisi, Domenico and Hugues, Louis and Bredeche, Nicolas},
+  place = {Berlin, Heidelberg},
+  date = {2006-00-00 2006},
+  ISBN = {978-3-540-38608-7 978-3-540-38615-5},
+  language = {en},
+  publisher = {Springer Berlin Heidelberg},
+  year = {2006},
+  key = {T5YGL7PP},
+  volume = {4095},
+  url = {http://link.springer.com/10.1007/11840541_68},
+  shortTitle = {Simbad},
+}
+@journalArticle{Webots04,
+  extra = {Citation Key: Webots04},
+  key = {K9935FZ8},
+  date = {2004-00-00 2004},
+  issue = {1},
+  publicationTitle = {Journal of Advanced Robotics Systems},
+  pages = {39–42},
+  year = {2004},
+  title = {Webots: Professional mobile robot simulation},
+  volume = {1},
+  url = {http://www.ars-journal.com/International-Journal-of- Advanced-Robotic-Systems/Volume-1/39-42.pdf},
+  author = {Michel, O.},
+}
+@computerProgram{genesisauthorsGenesisUniversalGenerative2024,
+  date = {2024-12-00 2024-12},
+  year = {2024},
+  title = {Genesis: a universal and generative physics engine for robotics and beyond},
+  key = {G2D35XHT},
+  url = {https://github.com/Genesis-Embodied-AI/Genesis},
+  author = {Genesis Authors, },
+}
+@journalArticle{blanco-claracoMultiVehicleSimulatorMVSim2023,
+  extra = {arXiv:2302.11033 [cs]},
+  key = {NT6EIY9Z},
+  DOI = {10.1016/j.softx.2023.101443.},
+  title = {MultiVehicle Simulator (MVSim): lightweight dynamics simulator for multiagents and mobile robotics research},
+  author = {Blanco-Claraco, José-Luis and Tymchenko, Borys and Mañas-Alvarez, Francisco José and Cañadas-Aránega, Fernando and López-Gázquez, Ángel and Moreno, José Carlos},
+  accessDate = {2025-02-26 00:52:22},
+  volume = {23},
+  year = {2023},
+  publicationTitle = {SoftwareX},
+  date = {2023-07-00 07-2023},
+  language = {en},
+  journalAbbreviation = {SoftwareX},
+  abstractNote = {Development of applications related to closed-loop control requires either testing on the ﬁeld or on a realistic simulator, with the latter being more convenient, inexpensive, safe, and leading to shorter development cycles. To address that need, the present work introduces MVSim, a simulator for multiple vehicles or robots capable of running dozens of agents in simple scenarios, or a handful of them in complex scenarios. MVSim employs realistic physics-grounded friction models for tire-ground interaction, and aims at accurate and GPU-accelerated simulation of most common modern sensors employed in mobile robotics and autonomous vehicle research, such as depth and RGB cameras, or 2D and 3D LiDAR scanners. All depth-related sensors are able to accurately measure distances to 3D models provided by the user to deﬁne custom world elements. Eﬃcient simulation is achieved by means of focusing on ground vehicles, which allows the use of a simpliﬁed 2D physics engine for body collisions while solving wheel-ground interaction forces separately. The core parts of the system are written in C++ for maximum eﬃciency, while Python, ROS 1, and ROS 2 wrappers are also oﬀered for easy integration into user systems. A custom publish/subscribe protocol based on ZeroMQ (ZMQ) is deﬁned to allow for multiprocess applications to access or modify a running simulation. This simulator enables and makes easier to do research and development on vehicular dynamics, autonomous navigation algorithms, and simultaneous localization and mapping (SLAM) methods.},
+  ISSN = {23527110},
+  libraryCatalog = {arXiv.org},
+  url = {http://arxiv.org/abs/2302.11033},
+  pages = {101443},
+  shortTitle = {MultiVehicle Simulator (MVSim)},
+}
+@conferencePaper{song2020flightmare,
+  extra = {Citation Key: song2020flightmare},
+  date = {2020-00-00 2020},
+  year = {2020},
+  title = {Flightmare: a flexible quadrotor simulator},
+  key = {KYB8EGBZ},
+  proceedingsTitle = {Conference on robot learning},
+  author = {Song, Yunlong and Naji, Selim and Kaufmann, Elia and Loquercio, Antonio and Scaramuzza, Davide},
+}
+@conferencePaper{guerraFlightGogglesModularFramework2019,
+  extra = {arXiv:1905.11377 [cs]},
+  language = {en},
+  DOI = {10.1109/IROS40897.2019.8968116},
+  title = {FlightGoggles: A Modular Framework for Photorealistic Camera, Exteroceptive Sensor, and Dynamics Simulation},
+  proceedingsTitle = {2019 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  author = {Guerra, Winter and Tal, Ezra and Murali, Varun and Ryou, Gilhyun and Karaman, Sertac},
+  accessDate = {2025-02-26 01:05:58},
+  date = {2019-11-00 11-2019},
+  year = {2019},
+  abstractNote = {FlightGoggles is a photorealistic sensor simulator for perception-driven robotic vehicles. The key contributions of FlightGoggles are twofold. First, FlightGoggles provides photorealistic exteroceptive sensor simulation using graphics assets generated with photogrammetry. Second, it provides the ability to combine (i) synthetic exteroceptive measurements generated in silico in real time and (ii) vehicle dynamics and proprioceptive measurements generated in motio by vehicle(s) in a motion-capture facility. FlightGoggles is capable of simulating a virtual-reality environment around autonomous vehicle(s). While a vehicle is in ﬂight in the FlightGoggles virtual reality environment, exteroceptive sensors are rendered synthetically in real time while all complex extrinsic dynamics are generated organically through the natural interactions of the vehicle. The FlightGoggles framework allows for researchers to accelerate development by circumventing the need to estimate complex and hard-to-model interactions such as aerodynamics, motor mechanics, battery electrochemistry, and behavior of other agents. The ability to perform vehicle-in-the-loop experiments with photorealistic exteroceptive sensor simulation facilitates novel research directions involving, e.g., fast and agile autonomous ﬂight in obstacle-rich environments, safe human interaction, and ﬂexible sensor selection. FlightGoggles has been utilized as the main test for selecting nine teams that will advance in the AlphaPilot autonomous drone racing challenge. We survey approaches and results from the top AlphaPilot teams, which may be of independent interest.},
+  shortTitle = {FlightGoggles},
+  libraryCatalog = {arXiv.org},
+  url = {http://arxiv.org/abs/1905.11377},
+  pages = {6941-6948},
+  key = {IN4N43L9},
+}
+@document{drake,
+  extra = {Citation Key: drake},
+  date = {2019-00-00 2019},
+  year = {2019},
+  title = {Drake: Model-based design and verification for robotics},
+  key = {YYJJNPEE},
+  url = {https://drake.mit.edu},
+  author = {Tedrake, Russ and Team, the Drake Development},
+}
