--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -8,18 +8,98 @@ This list is intended to be as complete as possible but obviously it is virtuall
 - I have not yet come across it: the simulator can be very niche.
 - The "simulator" could be a random project of someone on the internet. In that case it is up to my personal judgment to include it or not, depending on the value of the simulator, clearly this is subject to my personal bias.
 
-More simulatos in this paper: [@dimmigSurveySimulatorsAerial2023] and this table from the [ROS Aerial Community](https://github.com/ROS-Aerial/aerial_robotic_landscape/blob/main/docs/simulation.md#features)
 
-Some collections form my side:
-- [Genesis](https://genesis-world.readthedocs.io/en/latest/index.html#), paper [Genesis: A Generative and Universal Physics Engine for Robotics and Beyond](https://genesis-embodied-ai.github.io/)
-- SwarmSimX paper: [@lacheleSwarmSimXRealTimeSimulation2012]
-- [SAPIEN](https://sapien.ucsd.edu/)
-    - [Mani](https://maniskill.readthedocs.io/en/latest/)
-- [AGX Dynamics](https://www.algoryx.se/agx-dynamics/) (comercial) by Algoryx
 
-For wheel robots:
-- [MVSim](https://mvsimulator.readthedocs.io/en/latest/)
+| Name                                                                                        | Paper                                         | Physics Engine                                     | Rendering | Models | Features | Languages   | Licenses | Active | Source code                                                   |
+|---------------------------------------------------------------------------------------------|-----------------------------------------------|----------------------------------------------------|-----------|--------|----------|-------------|----------|--------|---------------------------------------------------------------|
+| [AirSim](https://microsoft.github.io/AirSim/)                                               | @shahAirSimHighFidelityVisual2017             |                                                    |           |        |          |             |          |        | [github](https://github.com/microsoft/AirSim)                 |
+| [ARGoS](https://www.argos-sim.info/)                                                        | @pinciroliARGoSModularMultiengine2011         |                                                    |           |        |          |             |          |        | [github](https://github.com/ilpincy/argos3)                   |
+| [AI2-Thor](https://ai2thor.allenai.org/)                                                    | @kolveAI2THORInteractive3D2022                |                                                    |           |        |          |             |          |        | [github](https://github.com/allenai/ai2thor)                  |
+| [ARTE](https://arvc.umh.es/arte/index_en.html)                                              | @gilDevelopmentDeploymentNew2015              |                                                    |           |        |          |             |          |        | [github](https://github.com/4rtur1t0/ARTE)                    |
+| [AVIS Engine](https://avisengine.com/)                                                      | @zarifAVISEngineHighperformance2021           |                                                    |           |        |          |             |          |        | [github](https://github.com/AVISEngine/AVISEngine-Simulator)  |
+| [CARLA](https://carla.org/)                                                                 | @pmlr-v78-dosovitskiy17a                      |                                                    |           |        |          |             |          |        | [github](https://github.com/carla-simulator/carla)            |
+| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/)                           | @rohmerVREPVersatileScalable2013              |                                                    |           |        |          |             |          |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
+| [Gazebo (`gz`)](https://gazebosim.org/home)                                                 |                                               |                                                    |           |        |          |             |          |        | [github](https://github.com/gazebosim/gz-sim)                 |
+| [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            |                                                    |           |        |          |             |          |        | [github](https://github.com/graspit-simulator/graspit)        |
+| [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                                | @savvaHabitatPlatformEmbodied2019             |                                                    |           |        |          |             |          |        | [github](https://github.com/facebookresearch/habitat-sim)     |
+| [Isaac Sim](https://developer.nvidia.com/isaac/sim)                                         |                                               | [NVIDIAPhysX](https://en.wikipedia.org/wiki/PhysX) |           |        |          |             |          |        |                                                               |
+| [MORSE](https://morse-simulator.github.io/)                                                 | @echeverriaModularOpenRobots2011              |                                                    |           |        |          |             |          |        | [github](https://github.com/morse-simulator/morse)            |
+| [PyBullet](https://pybullet.org/wordpress/)                                                 | @coumans2021                                  | [Bullet](https://github.com/bulletphysics/bullet3) |           |        |          | Python      |          |        | [github](https://github.com/bulletphysics/bullet3)            |
+| [PyBullet Industrial](https://pybullet-industrial.readthedocs.io/en/latest/how_to_use.html) | @Baumgartner_PyBullet_Industrial_A_2023       | [Bullet](https://github.com/bulletphysics/bullet3) |           |        |          | Python      |          |        | [github](https://github.com/WBK-Robotics/pybullet_industrial) |
+| [SAPIEN](https://sapien.ucsd.edu/)                                                          | @xiangSAPIENSimulAtedPartBased2020            |                                                    |           |        |          |             |          |        | [github](https://github.com/haosulab/SAPIEN)                  |
+| [ManiSkill](https://www.maniskill.ai/) powered SAPIEN                                       |                                               |                                                    |           |        |          |             |          |        | [github](https://github.com/haosulab/ManiSkill)               |
+| [Simbad](https://simbad.sourceforge.net/)                                                   | @huguesSimbadAutonomousRobot2006              |                                                    |           |        |          |             |          |        | [sourceforge](https://sourceforge.net/projects/simbad/)       |
+| [Webots](https://cyberbotics.com/)                                                          | @Webots04                                     |                                                    |           |        |          |             |          |        | [github](https://github.com/cyberbotics/webots)               |
+| 🔍 [Genesis](https://genesis-world.readthedocs.io/en/latest/)                               | @genesisauthorsGenesisUniversalGenerative2024 |                                                    |           |        |          |             |          |        | [github](https://github.com/Genesis-Embodied-AI/Genesis)      |
+| [SwarmSimX](https://link.springer.com/chapter/10.1007/978-3-642-34327-8_34)                 | @lacheleSwarmSimXRealTimeSimulation2012       |                                                    |           |        |          |             |          |        |                                                               |
+| [MVSim](https://mvsimulator.readthedocs.io/en/latest/)                                      | @blanco-claracoMultiVehicleSimulatorMVSim2023 |                                                    |           |        |          |             |          |        | [github](https://github.com/MRPT/mvsim)                       |
+| [AGX Dynamics](https://www.algoryx.se/agx-dynamics/)                                        |                                               |                                                    |           |        |          |             |          |        |                                                               |
+| [Flightmare](https://uzh-rpg.github.io/flightmare/)                                         | @song2020flightmare                           |                                                    |           |        |          |             |          |        | [github](https://github.com/uzh-rpg/flightmare)               |
+| [O3DE](https://o3de.org/)                                                                   |                                               |                                                    |           |        |          |             |          |        | [github](https://github.com/o3de/o3de)                        |
+| [FlightGear](https://www.flightgear.org/)                                                   |                                               |                                                    |           |        |          |             |          |        | [gitlab](https://gitlab.com/flightgear/flightgear)            |
+| [FlightGoogles](https://flightgoggles.mit.edu/)                                             | @guerraFlightGogglesModularFramework2019      |                                                    |           |        |          |             |          |        | [github](https://github.com/mit-aera/FlightGoggles)           |
+| [DRAKE](https://drake.mit.edu/)                                                             | @drake                                        |                                                    |           |        |          | C++, Python |          |        |                                                               |
 
-## External References
+
+Cool projects:
+- [Hexapod Robot Simulator](https://github.com/mithi/hexapod-robot-simulator) by Mithi Sevilla
+- [robot-gui](https://github.com/glumb/robot-gui) by Maximilian Beck
+
+Subject specific:
+- [Neurorobotics Platform (NRP)](https://neurorobotics.net/): Internet-accessible simulation of robots controlled by spiking neural networks, source code [gitbucket](https://bitbucket.org/hbpneurorobotics/neurorobotics-platform/src/master/)
+
+
+## from /Ly0n/awesome-robotic-tooling
+
+
+- scenario_runner - Traffic scenario definition and execution engine.
+- lgsv - LG Electronics America R&D Center has developed an HDRP Unity-based multi-robot simulator for autonomous vehicle developers.
+- deepdive - End-to-end simulation for self-driving cars.
+- self-driving-car-sim - A self-driving car simulator built with Unity.
+- car_demo - This is a simulation of a Prius in gazebo 9 with sensor data being published using ROS kinetic.
+- sumo - Eclipse SUMO is an open source, highly portable, microscopic and continuous road traffic simulation package designed to handle large road networks.
+- open-simulation-interface - A generic interface for the environmental perception of automated driving functions in virtual scenarios.
+- ESIM - An Open Event Camera Simulator.
+- Menge - Crowd Simulation Framework.
+- pedsim_ros - Pedestrian simulator powered by the social force model for Gazebo.
+- opencrg - Open file formats and open source tools for the detailed description, creation and evaluation of road surfaces.
+- esmini - A basic OpenSCENARIO player.
+- OpenSceneGraph - An open source high performance 3D graphics toolkit, used by application developers in fields such as visual simulation, games, virtual reality, scientific visualization and modelling.
+- morse - An academic robotic simulator, based on the Blender Game Engine and the Bullet Physics engine.
+- ROSIntegrationVision - Support for ROS-enabled RGBD data acquisition in Unreal Engine Projects.
+- fetch_gazebo - Contains the Gazebo simulation for Fetch Robotics Fetch and Freight Research Edition Robots.
+- rotors_simulator - Provides some multirotor models.
+- flow - A computational framework for deep RL and control experiments for traffic microsimulation.
+- gnss-ins-sim - GNSS + inertial navigation, sensor fusion simulator. Motion trajectory generator, sensor models, and navigation.
+- Ignition Robotics - Test control strategies in safety, and take advantage of simulation in continuous integration tests.
+- simulation assets for the SubT - This collection contains simulation assets for the SubT Challenge Virtual Competition in Gazebo.
+- gazebo_ros_motors - Contains currently two motor plugins for Gazebo, one with an ideal speed controller and one without a controller that models a DC motor.
+- map2gazebo - ROS package for creating Gazebo environments from 2D maps.
+- sim_vehicle_dynamics - Vehicle Dynamics Simulation Software of TUM Roborace Team.
+- gym-carla - An OpenAI gym wrapper for CARLA simulator.
+- simbody - High-performance C++ multibody dynamics/physics library for simulating articulated biomechanical and mechanical systems like vehicles, robots, and the human skeleton.
+- gazebo_models - This repository holds the Gazebo model database.
+- pylot - Autonomous driving platform running on the CARLA simulator.
+- flightmare - Flightmare is composed of two main components: a configurable rendering engine built on Unity and a flexible physics engine for dynamics simulation.
+- champ - ROS Packages for CHAMP Quadruped Controller.
+- rex-gym - OpenAI Gym environments for an open-source quadruped robot (SpotMicro).
+- Trick - Developed at the NASA Johnson Space Center, is a powerful simulation development framework that enables users to build applications for all phases of space vehicle development.
+- usv_sim_lsa - Unmanned Surface Vehicle simulation on Gazebo with water current and winds.
+- 42 - Simulation for spacecraft attitude control system analysis and design.
+- Complete_Street_Rule - A scenario oriented design tool intended to enable users to quickly create procedurally generated multimodal streets in ArcGIS CityEngine.
+- AutoCore simulation - Provides test environment for Autoware and still during early development, contents below may changed during updates.
+- fields-ignition - Generate random crop fields for Ignition Gazebo.
+- Unity-Robotics-Hub - Central repository for tools, tutorials, resources, and documentation for robotic simulation in Unity.
+- BlueSky - The goal of BlueSky is to provide everybody who wants to visualize, analyze or simulate air traffic with a tool to do so without any restrictions, licenses or limitations.
+- Cloe - Empowers developers of automated-driving software components by providing a unified interface to closed-loop simulation.
+- Dynamic_logistics_Warehouse - Gazebo simulation of dynamics environment in warehouses.
+- OpenCDA - A generalized framework for prototyping full-stack cooperative driving automation applications under CARLA+SUMO.
+
+
+## External Resources
 
 - [Simulators - Awesome Robotics Libraries Github Repo](https://github.com/jslee02/awesome-robotics-libraries?tab=readme-ov-file#simulators)
+- [Simulators - Awesome Robotic Tooling](https://github.com/Ly0n/awesome-robotic-tooling)
+- [@dimmigSurveySimulatorsAerial2023] and this table from the [ROS Aerial Community](https://github.com/ROS-Aerial/aerial_robotic_landscape/blob/main/docs/simulation.md#features)
+
+## References
